apps/selina/selina.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: selina
  namespace: selina
spec:
  selector:
    matchLabels:
      app: selina
  template:
    metadata:
      labels:
        app: selina
    spec:
      containers:
        - name: selina
          image: nginx:1.22.0-alpine
          resources:
            requests:
              cpu: 50m
            limits:
              cpu: 100m
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-index
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true
            - name: nginx-index
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
              readOnly: true
            - name: nginx-index
              mountPath: /usr/share/nginx/html/default.css
              subPath: default.css
              readOnly: true
      volumes:
        - name: nginx-index
          configMap:
            name: nginx-index
---
apiVersion: v1
kind: Service
metadata:
  name: selina
  namespace: selina
spec:
  selector:
    app: selina
  ports:
    - protocol: TCP
      port: 80
