apps/selina/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selina
  namespace: selina
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
        - selinaklepic.com
        - www.selinaklepic.com
      secretName: selina-tls
  rules:
    - host: www.selinaklepic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: selina
                port:
                  number: 80
